<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".fragment.auth_fragments.ForgotPasswordFragment">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo" />
    <FrameLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_stroke_gradient">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/emailTitle"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white_light"
            android:textColorHint="@color/white_hint"
            android:textCursorDrawable="@drawable/cursor"
            app:backgroundTint="@color/transparent"

            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />
    </FrameLayout>

    <TextView
        android:id="@+id/forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/forgotPasswordDescription"
        android:textAlignment="center"
        android:textColor="@color/white_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/send_email_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/main_button"
        app:cornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sendForgotPassMailTitle"
            android:textAlignment="center"
            android:textColor="@color/white_light"
            android:textSize="20dp"
            tools:ignore="SpUsage,TextSizeCheck" />
    </LinearLayout>

</LinearLayout>